Mobile text overflow fix(?) 3

--- a/main/static/css/CP-S.css
+++ b/main/static/css/CP-S.css
@@ -4,7 +4,7 @@
 }
 
 .tabset .tab-panel {
-  overflow-wrap: anywhere;
+  word-break: break-all;
   display: none;
 }
 
